@@ -1,5 +1,10 @@
 2015-01-08  Corinna Vinschen  <corinna@vinschen.de>
 
+	* include/cygwin/socket.h (struct cmsghdr): Redefine cmsg_len as type
+	size_t.  Add comment to explain why.
+
+2015-01-08  Corinna Vinschen  <corinna@vinschen.de>
+
 	* localtime.cc (__cygwin_gettzoffset): New function for access from
 	newlib.
 	(__cygwin_gettzname): Ditto.
